--- a/.github/workflows/visual-testing.yml
+++ b/.github/workflows/visual-testing.yml
@@ -12,7 +12,16 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '14'
-#      - name: Install dependencies
+      - uses: LouisBrunner/checks-action@v1.1.1
+        with:
+            token: ${{ secrets.GITHUB_TOKEN }}
+            name: visual-testing
+            conclusion: "neutral"
+            details_url: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+            output: |
+              {"summary":"Job Failed","text_description":"See job details here: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"}                    
+
+      #      - name: Install dependencies
 #        run: yarn install --frozen-lockfile
 #      - name: Install Playwright
 #        run: yarn playwright install --with-deps
@@ -33,10 +42,10 @@ jobs:
 #          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
 #          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 #          AWS_DEFAULT_REGION: 'eu-central-1'
-      - name: Link report in comment
-        if: failure()
-        uses: peter-evans/create-or-update-comment@v2
-        with:
-          issue-number: ${{ github.event.number  }}
-          body: |
-            This PR introduces visual changes, please check them out here! [Visual tests report](https://visual-playwright-reports.s3.eu-central-1.amazonaws.com/${{ github.head_ref }}/index.html)
+#      - name: Link report in comment
+#        if: failure()
+#        uses: peter-evans/create-or-update-comment@v2
+#        with:
+#          issue-number: ${{ github.event.number  }}
+#          body: |
+#            This PR introduces visual changes, please check them out here! [Visual tests report](https://visual-playwright-reports.s3.eu-central-1.amazonaws.com/${{ github.head_ref }}/index.html)
