--- a/.github/workflows/sync-test-scenarios.yml
+++ b/.github/workflows/sync-test-scenarios.yml
@@ -1,8 +1,12 @@
 name: Get Custom Field Value
 on:
+  pull_request:
+    branches:
+      - main
+    types: [opened]
   push:
     branches:
-        david/AP-5
+      - david/AP-6
 
 jobs:
   getJiraKey:
@@ -15,6 +19,7 @@ jobs:
       - name: Extract Jira Key from Branch Name
         run: |
           branchName=$(git symbolic-ref --short HEAD)
+          echo $branchName
           if [[ $branchName =~ ([A-Z][A-Z0-9]+-[0-9]+) ]]; then
           jiraKey=${BASH_REMATCH[1]}
           echo "jiraKey=$jiraKey" >> $GITHUB_ENV
@@ -24,12 +29,12 @@ jobs:
         run: |
           apiEndpoint=https://${{secrets.JIRA_DOMAIN}}/rest/api/2/issue/${{ env.jiraKey }}
           echo "testScenarios<<EOF" >> $GITHUB_ENV
-          curl --request GET --url $apiEndpoint --user ${{secrets.JIRA_EMAIL}}:${{secrets.JIRA_TOKEN}} --header 'Accept: application/json' | jq -r '.fields.customfield_10038' | awk '/---Test scenarios/{flag=1; next} /---/{flag=0} flag' | grep -v 'checked' | sed 's/text: //g' >> $GITHUB_ENV           
+          curl --request GET --url $apiEndpoint --user ${{secrets.JIRA_EMAIL}}:${{secrets.JIRA_TOKEN}} --header 'Accept: application/json' | jq -r '.fields.customfield_10036' | awk '/--- Test scenarios/{flag=1; next} /---/{flag=0} flag' | sed 's/\* \[\]/-/' >> $GITHUB_ENV           
           echo "EOF" >> $GITHUB_ENV
       - name: Leave a comment
         if: ${{ env.testScenarios != '' }}
         uses: mshick/add-pr-comment@v2
         with:
           message: |
-            🧪 Test scenarios for this story 🧪 
+            ## Test scenarios for this story 🧪 
             ${{ env.testScenarios }}
